tests/compile-fail/immutable_assignment.kofun
# expect-error: E323
fn main() {
    let answer = 41
    answer = 42
    print(answer)
}
